gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/traits_alone.d
version https://git-lfs.github.com/spec/v1
oid sha256:eb166db8f8f9ad4e276afbbf08637cfeb7b78965808d86d1a8c862706321f7d3
size 306
